src/modules/page_header/page_header.scss
$pageHeaderCurves: (
  ktzhLogoPaddingTop: (
    tiny: 0,
    xsmall: 4px,
    small: 4px,
    medium: 0,
    large: 0,
    xlarge: 4px,
  ),
  ktzhLogoTop: (
    tiny: 25px,
    xsmall: 22px,
    small: 16px,
    medium: 0,
    large: -9px,
    xlarge: -15px,
  ),
  ktzhLogoTopFF: (
    tiny: 24px,
    xsmall: 21px,
    small: 15px,
    medium: -3px,
    large: -13px,
    xlarge: -18px,
  ),
  ktzhLogoMarginLeft: (
    tiny: -6px,
    xsmall: -6px,
    small: 0,
  ),
  ktzhLogoWidth: (
    tiny: 54px,
    xsmall: 66px,
    small: 87px,
    medium: 125px,
    large: 153px,
    xlarge: 184px,
  ),
  pageHeaderTop: (
    tiny: $sizeLarge,
    small: $sizeBig,
    medium: $sizeBiggerBig,
    xlarge: $sizeSmallHuge
  ),
  closeButtonWidth: (
    tiny: $sizeSmallRegular,
    medium: $sizeRegular,
  ),
  closeButtonTop: (
    tiny: $sizeRegular,
    medium: $sizeLarge,
  ),
  pageHeaderBottom: (
    tiny: $sizeLarge,
    medium: $sizeBiggerBig,
  ),
  pageHeaderMinimal: (
    tiny: $sizeLarge,
    medium: $sizeSmallBig,
  ),
  pageTitleMinimalLineHeight: (
    tiny: $sizeFontBiggerRegular,
    medium: $sizeFontLarge,
  ),
  breadcrumpMarginBottom: (
    tiny: $sizeSmallRegular,
    xlarge: $sizeRegular
  ),
  subsectionMarginBottom: (
    tiny: $sizeLarge,
    medium: $sizeBiggerBig,
  ),
  subsectionMarginTop: (
    tiny: $sizeSmallHuge,
    medium : $sizeHuge,
    xlarge: $sizeHuge,
  ),
  subsectionPaddingTop: (
    tiny: ($sizeSmallHuge + $sizeLarge),
    medium : ($sizeHuge + $sizeBig),
    xlarge: ($sizeHuge + $sizeBiggerBig),
  ),
  subsectionImageTitleMarginTop: (
    tiny: ($sizeSmallHuge + $sizeFontBiggerRegular + $sizeTiny),
    xsmall: ($sizeSmallHuge + $sizeFontMedium + $sizeTiny),
    medium : ($sizeHuge + $sizeFontMedium + $sizeTiny),
    xlarge: ($sizeHuge + $sizeFontMedium + $sizeTiny),
  ),
  subsectionImageTitlePaddingTop: (
    tiny: ($sizeSmallHuge + $sizeFontBiggerRegular + $sizeLarge + $sizeTiny),
    xsmall: ($sizeSmallHuge + $sizeFontMedium + $sizeBig + $sizeTiny),
    medium : ($sizeHuge + $sizeFontMedium + $sizeBig + $sizeTiny),
    xlarge: ($sizeHuge + $sizeFontMedium + $sizeBiggerBig + $sizeTiny),
  ),
);


.mdl-page-header {
  @include gridBleed($fullwidth: true);
  @include sizeCurve('padding-top', pageHeaderTop, $pageHeaderCurves);
  @include sizeCurve(padding-bottom, pageHeaderBottom, $pageHeaderCurves);

  &__logo-container {
    height: 0;

    a {
      display: inline-block;
    }
  }

  &__logo {
    position: relative;

    @include polyFluidSizing('width', map-get($pageHeaderCurves, ktzhLogoWidth));
    @include polyFluidSizing('height', map-get($pageHeaderCurves, ktzhLogoWidth));
    @include sizeCurve('padding-top', ktzhLogoPaddingTop, $pageHeaderCurves);
    @include polyFluidSizing('top', map-get($pageHeaderCurves, ktzhLogoTop));
    @include polyFluidSizing('margin-left', map-get($pageHeaderCurves, ktzhLogoMarginLeft));
  }

  &__breadcrumb {
    min-height: 1.5em;

    @include polyFluidSizing('font-size', map-get($fontSizeCurves, regular));
    @include sizeCurve('margin-bottom', breadcrumpMarginBottom, $pageHeaderCurves);

    span {
      color: $colorBlack60;
    }

    .mdl-page-header__closebutton {
      position: fixed;
      line-height: 1.5em;

      @include mq($from: tiny, $to: large) {
        right: $sizeBig;
        right: calc(#{$sizeBig} + var(--scrollbar-wd)); // stylelint-disable-line
      }
      @include mq($from: large) {
        right: $sizeBiggerBig;
        right: calc(#{$sizeBiggerBig} + var(--scrollbar-wd)); // stylelint-disable-line
      }
      @include sizeCurve('top', closeButtonTop, $pageHeaderCurves);
      @include polyFluidSizing('font-size', map-get($fontSizeCurves, regular));

      .icon {
        @include sizeCurve('width', closeButtonWidth, $pageHeaderCurves);
        display: inline-block;
        vertical-align: middle;
        top: -2px;
        left: $sizeTiny;
        position: relative;
      }
    }
  }

  &__breadcrumb-angle,
  &__breadcrumb-backlink {
    vertical-align: text-top;
    width: $sizeFontMedium;
    height: $sizeFontMedium;
    margin-left: 0;

    @include mq($from: tiny, $to: medium) {
      margin-left: -$sizeFontMedium;
    }
  }

  &__breadcrumb-backlink use {
    fill: $colorBlack60;
  }

  &--minimal {
    @include sizeCurve(padding-bottom padding-top, pageHeaderMinimal, $pageHeaderCurves);

    .mdl-page-header__breadcrumb {
      margin-bottom: 0;
      min-height: unset;

      .mdl-breadcrumb {
        display: none;
      }
    }

    .mdl-page-header__title {
      @include sizeCurve(line-height, pageTitleMinimalLineHeight, $pageHeaderCurves);
      @include polyFluidSizing('font-size', map-get($fontSizeCurves, regular));

      margin-bottom: 0;
    }

    .mdl-page-header__logo-container {
      display: none;
    }

    .mdl-page-header__expander {
      margin-top: -$sizeMini;

      @include mq($from: tiny, $to: medium) {
        margin-top: -$sizeTiny;
      }
    }

    .lyt-wrapper:first-child {
      .grid-x:nth-child(2) {
        display: none;
      }
    }
  }

  &__expander {
    position: fixed;
    right: 0;
    margin-top: $sizeTiny;
    padding-right: $sizeRegular;

    @include mq($from: tiny, $to: medium) {
      margin-top: -$sizeTiny;
    }
  }


  .atm-lead {
    margin-top: 0;
    margin-left: 0;
  }

  .atm-button {
    @include sizeCurve('margin-bottom', regular);
  }

  .mdl-person_card {
    .atm-button {
      margin-bottom: 0;
    }
  }

  .mdl-tag-group {
    max-width: $sizeWidthTextContent;

    .atm-heading {
      @include mq($from: tiny, $to: medium) {
        margin-bottom: 0;
      }
      @include mq($from: medium, $to: xlarge) {
        margin-bottom: 4px;
      }
      @include mq($from: xlarge) {
        margin-bottom: 4px;
      }
    }

    .mdl-tag-group__tags {
      @include mq($from: tiny, $to: medium) {
        margin-left: calc(-#{$sizeSmallRegular});
        margin-right: calc(-#{$sizeSmallRegular});
        margin-bottom: 16px;
      }
      @include mq($from: medium) {
        margin-left: calc(-#{$sizeLarge});
        margin-right: calc(-#{$sizeLarge});
        margin-bottom: 24px;
      }

      .atm-anchorlink--tag-top {
        margin-bottom: 0;
        margin-top: 8px;

        @include polyFluidSizing('font-size', map-get($fontSizeCurves, large));
        @include mq($from: tiny, $to: medium) {
          border-radius: 75.5px;
          padding: 0 $sizeRegular;
          height: calc(#{$sizeSmallLarge} + #{$sizeSmallRegular});
          line-height: calc(#{$sizeSmallLarge} + #{$sizeSmallRegular});
        }
      }
    }
  }

  &--headerimage {
    padding-bottom: 0;

    .mdl-image-figure {
      &__img-wrapper {
        margin-bottom: 0;
      }
    }

    .mdl-page-header__subsection {
      @include sizeCurve(margin-top, subsectionMarginTop, $pageHeaderCurves, $isNegative: true);
      @include sizeCurve(padding-top, subsectionPaddingTop, $pageHeaderCurves);

      .lyt-wrapper {
        @include sizeCurve(margin-bottom, subsectionMarginBottom, $pageHeaderCurves);
      }
    }

    &.mdl-page-header--image-title {
      .mdl-image-figure__img-wrapper {
        margin-bottom: $sizeTiny;
      }

      .mdl-page-header__subsection {
        @include sizeCurve(margin-top, subsectionImageTitleMarginTop, $pageHeaderCurves, $isNegative: true);
        @include sizeCurve(padding-top, subsectionImageTitlePaddingTop, $pageHeaderCurves);
      }
    }
  }
}

@-moz-document url-prefix('') {
  .mdl-page-header {
    &__logo {
      @include polyFluidSizing('top', map-get($pageHeaderCurves, ktzhLogoTopFF));
    }
  }
}


@each $key, $val in $tl-color-variations {
  .#{$key} {
    .mdl-page-header {
      &--inverted,
      [ class*='--inverted' ] & {
        background-color: #{$val};

        ::selection {
          color: $colorBlack;
          background: $colorWhite;
        }

        .atm-heading,
        .atm-lead,
        .mdl-page-header__breadcrumb,
        .mdl-breadcrumb__show-context,
        .mdl-page-header__closebutton {
          color: $colorWhite;
        }

        .mdl-person_card {
          .atm-heading {
            color: $colorBlack;
          }
        }

        .mdl-page-header__breadcrumb use {
          fill: $colorWhite;
        }

        .mdl-page-header__subsection {
          background-color: $colorWhite;

          ::selection {
            background: #{$val};
            color: $colorWhite;
          }

          .atm-heading,
          .atm-lead,
          .mdl-page-header__breadcrumb {
            color: $colorBlack;
          }
        }
      }
    }
  }
}

